# kademlia

./: CMakeLists.txt  LICENSE  VCPKG.md
cmake/: FindMSGSL.cmake  FindgRPC.cmake  Findminiupnpc.cmake
include/: backing_store.hpp  base.hpp  k_buckets.hpp  maintainer.hpp  node.hpp  remote.hpp
proto/: format.proto
src/: base.cpp  imgui.hpp  internal.hpp  k_buckets.cpp  main.cpp  node.cpp  remote.cpp
